<resources>
    <string name="app_name">Routing</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="action_forget">Forget Password</string>
    <string name="action_submit">Submit</string>

    <string name="error_username">Field is required</string>
    <string name="error_email">oops! You entered a wrong email address...</string>
    <string name="error_pass">Invalid Password... ( > 4)</string>
    <string name="error_telephone">Invalid Number (> 9)</string>
    <string name="error_pass_not_match">Password not matched</string>
    <string name="error_checkbox">Checked the CheckBox</string>

    <string name="prompt_name">Full Name</string>
    <string name="prompt_email">Email</string>
    <string name="google_maps_key">AIzaSyBCttQHT1BM4lCxX2RP7ToIYjT2BhP0gFM</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="prompt_telephone">Telephone</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>

    <string name="find">Find</string>
    <string name="source">Enter Source</string>
    <string name="destination">Enter Destination</string>

    <string-array name="array_name">
        <item>Select User</item>
        <item>Employee</item>
        <item>Manager</item>
    </string-array>

    <array name="color_picture">
        <item>@drawable/home</item>
        <item>@drawable/update_profile</item>
        <item>@drawable/blogger</item>
        <item>@drawable/routes</item>
        <item>@drawable/gallery</item>
        <item>@drawable/event</item>
        <item>@drawable/member</item>
        <item>@drawable/notification</item>
        <item>@drawable/account_settings</item>
        <item>@drawable/logout</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
